Controller->Service->Model Java思想
