# routers/commentsRouter____payServer_controllers.go
@@ -16,109 +16,10 @@ func init() {
 			Filters:          nil,
 			Params:           nil})
 
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"],
+	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:BankcardController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:BankcardController"],
 		beego.ControllerComments{
-			Method:           "Post",
-			Router:           `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           `/:objectId`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           `/:objectId`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           `/:objectId`,
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           `/:uid`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           `/:uid`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           `/:uid`,
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Login",
-			Router:           `/login`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"] = append(beego.GlobalControllerRouter["github.com/LiWenGu/payServer/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Logout",
-			Router:           `/logout`,
+			Method:           "FindOne",
+			Router:           `/findOne`,
 			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
